<resources>
    <string name="app_name">PawPlan</string>

    <string name="back">Zurück</string>
    <string name="navigation_schedule">Schedule</string>
    <string name="navigation_dogs">Dogs</string>
    <string name="navigation_tracker">Tracker</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_login">Login</string>

    <string name="displayname_label">Display Name</string>
    <string name="username_label">E-Mail</string>
    <string name="password_label">Password</string>
    <string name="register_button">Register</string>
    <string name="register_caption">Register</string>
    <string name="login_button">Login</string>
    <string name="login_caption">Login</string>

    <string name="dog_details_picture_desc">Cute dog picture</string>
    <string name="dog_details_name">Nana</string>
    <string name="dog_details_fav_button">Favorisieren</string>
    <string name="dog_details_defav_button">Entfavorisieren</string>
    <string name="dog_details_age_label">Alter</string>
    <string name="dog_details_age_value">4 Jahre</string>
    <string name="dog_details_gender_label">Gender</string>
    <string name="dog_details_size_label">Size</string>
    <string name="dog_details_star_desc">Rating</string>
    <string name="dog_details_description_label">Description</string>
    <string name="dog_details_rating_desc">2.5</string>
    <string name="dog_details_appointment_desc">13 Walks</string>

    <string name="dog_remarks_none">No remarks yet..</string>
    <string name="dog_remarks_caption">Remarks about %1$s</string>
    <string name="dog_remarks_name_label">Placeholder Name</string>
    <string name="dog_remarks_date_label">01.04.1988 00:00:00</string>
    <string name="dog_remarks_label">Yes, yes.. great dog.. great walk.. simply great</string>

    <string name="pawplan_logo_desc">PawPlan Logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ratings_icon_desc">Star</string>
    <string name="ratings_average">4.7</string>
    <string name="rating_remark_count">(30 remarks)</string>
    <string name="dog_age">4 Jahre</string>
    <string name="bulletpoint">•</string>

    <string name="date_placeholder">Sa, 04 Juli 2026</string>
    <string name="time_placeholder">10:00</string>

    <string name="dogs_overview_caption">Dogs</string>
    <string name="dogs_overview_search_name_hint">Name</string>
    <string name="dogs_overview_search_all">All</string>
    <string name="dogs_overview_search_favs">Favs</string>
    <string name="dogs_overview_search_small">Small</string>
    <string name="dogs_overview_search_mid">Mid</string>
    <string name="dogs_overview_search_large">Large</string>
    <string name="appointments_fast_select_caption">Schnellauswahl</string>
    <string name="appointments_caption">Appointments</string>
    <string name="appointments_pending_caption">Nächste Termine</string>

    <string name="bookappointment_caption">Book appointment</string>

    <string name="wt_start_walk">Start walk</string>
    <string name="wt_stop_walk">Stop walk</string>
    <string name="wt_caption">Walk Tracker</string>
    <string name="wt_trackermap_desc">Walk Tracker Map</string>
    <string name="wt_pendingwalk_caption">Nächster Spaziergang</string>
    <string name="wt_previouswalk_caption">Vorherige Spaziergänge</string>
    <string name="wt_reportbutton_desc">Report</string>

    <string name="wtp_walklength">%1$.1f km</string>
    <string name="wtp_walkduration">%1$d h %2$dm</string>

    <string name="wtp_remark_caption">Submit remark for %1$s</string>
    <string name="wtp_remark_emptyerror">Please enter a comment</string>

    <string name="wtp_remark_rating1">1</string>
    <string name="wtp_remark_rating2">2</string>
    <string name="wtp_remark_rating3">3</string>
    <string name="wtp_remark_rating4">4</string>
    <string name="wtp_remark_rating5">5</string>

    <string name="wtp_remark_commentLabel">Leave a comment on your walk</string>
    <string name="wtp_remark_submitButton">Submit Remark</string>
    <string name="wtp_remark_ratingLabel">Rating</string>

    <string name="tracker_startWalk_title">Start walk?</string>
    <string name="tracker_startWalk_message">
        Do really want to start tracking now?
    </string>
    <string name="tracker_startWalk_positiveLabel">Yes</string>
    <string name="tracker_startWalk_negativeLabel">No</string>

    <string name="tracker_reportIncident_title">Report incident?</string>
    <string name="tracker_reportIncident_message">
        Do really want to report an incident?
    </string>
    <string name="tracker_reportIncident_positiveLabel">Yes</string>
    <string name="tracker_reportIncident_negativeLabel">No</string>

    <string name="tracker_stopWalk_title">Complete walk?</string>
    <string name="tracker_stopWalk_message">
        Do really want to stop tracking now?
        This completes the walk and can leave a remark about it.
    </string>
    <string name="tracker_stopWalk_positiveLabel">Yes</string>
    <string name="tracker_stopWalk_negativeLabel">No</string>

    <string name="tracker_inspectWalk_title">Not allowed</string>
    <string name="tracker_inspectWalk_message">
        You can\'t inspect a walk. While a walk is actively tracked.
    </string>
    <string name="tracker_inspectWalk_label">Okay</string>

    <string name="wtp_report_caption">Report incident</string>

    <string name="wtp_report_dateButton">Select date</string>
    <string name="wtp_report_timeButton">Select time</string>
    <string name="wtp_report_hint">What happened?</string>
    <string name="wtp_report_submit">Submit Report</string>

    <string name="wtp_report_emptyerror">Please enter a description</string>

    <string name="wtp_noupcomingappointments">No upcoming appointments…</string>
    <string name="wtp_nocompletedappointments">No completed appointments…</string>

    <string name="bookappointment_picture_desc">Cute dog picture</string>
    <string name="bookappointment_selectDogButton">Change</string>
    <string name="bookappointment_selectDateButton">Select date</string>
    <string name="bookappointment_selectTimeButton">Select time</string>
    <string name="bookappointment_submit">Submit request</string>

    <string name="profile_caption">Profile</string>
    <string name="profile_visit_value">47</string>
    <string name="profile_visit_label">Besuche</string>
    <string name="profile_distance_value">89 km</string>
    <string name="profile_distance_label">Gelaufen</string>
    <string name="profile_fav_value">2</string>
    <string name="profile_fav_label">Favoriten</string>
    <string name="profile_logoutButton_desc">Logout</string>
    <string name="profile_saveButton_label">Save</string>
    <string name="profile_initial_text">EI</string>
    <string name="profile_name_text">Example Name</string>
    <string name="profile_email_text">email@example.com</string>
    <string name="profile_role_example">ExampleRole</string>
    <string name="profile_name_label">Name</string>
    <string name="profile_name_value">Example Name</string>
    <string name="profile_email_label">E-Mail</string>
    <string name="profile_email_value">email@example.com</string>
    <string name="profile_phone_label">Phone</string>
    <string name="profile_phone_value">+0123456789</string>
    <string name="profile_birthbay_label">Birthday</string>
    <string name="profile_birthday_value">Mon, 25.04.1988</string>
    <string name="profile_volunteer_label">Volunteer since</string>
    <string name="profile_volunteer_value">Mon, 25.04.1988</string>

    <string name="profile_role_observer">Observer</string>
    <string name="profile_role_volunteer">Volunteer</string>
    <string name="profile_role_admin">Admin</string>

    <string name="dog_gender_female">Female</string>
    <string name="dog_gender_female_neutered">Female (Neutered)</string>
    <string name="dog_gender_male">Male</string>
    <string name="dog_gender_male_neutered">Male (Neutered)</string>

    <string name="dog_size_small">Small</string>
    <string name="dog_size_medium">Medium</string>
    <string name="dog_size_large">Large</string>

    <string name="dog_rating_average">%1$.1f</string>
    <string name="dog_rating_count">%1$d Walks</string>

    <string name="appointment_edit_button">Edit Appointment</string>
    <string name="appointment_start_button">Start Appointment</string>
    <string name="appointment_cancel_button">Cancel Appointment</string>

    <string name="appointment_badge_pending">Pending</string>
    <string name="appointment_badge_confirmed">Confirmed</string>
    <string name="appointment_badge_completed">Finished</string>
    <string name="appointment_badge_cancelled">Cancelled</string>

</resources>