<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_dogs"
        android:icon="@drawable/navigation_dogs"
        android:title="@string/navigation_dogs" />
    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/navigation_calendar"
        android:title="@string/navigation_schedule" />
    <item
        android:id="@+id/navigation_tracker"
        android:icon="@drawable/navigation_tracker"
        android:title="@string/navigation_tracker" />
    <item
        android:id="@+id/navigation_profiles"
        android:icon="@drawable/navigation_person"
        android:title="@string/navigation_profile" />
</menu>