<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tracking.presentation.report.TrackerReportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="113dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/remarkCaption"
            style="@style/TextAppearance.Material3.TitleLarge.Emphasized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/wtp_remark_caption" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.Material3.LabelLarge.Emphasized"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/wtp_remark_ratingLabel" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/star1"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/wtp_remark_rating1"
                    android:padding="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_action_star"
                    app:tint="@color/md_theme_outline" />

                <ImageButton
                    android:id="@+id/star2"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/wtp_remark_rating2"
                    android:padding="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_action_star"
                    app:tint="@color/md_theme_outline" />

                <ImageButton
                    android:id="@+id/star3"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/wtp_remark_rating3"
                    android:padding="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_action_star"
                    app:tint="@color/md_theme_outline" />

                <ImageButton
                    android:id="@+id/star4"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/wtp_remark_rating4"
                    android:padding="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_action_star"
                    app:tint="@color/md_theme_outlineVariant" />

                <ImageButton
                    android:id="@+id/star5"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/wtp_remark_rating5"
                    android:padding="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_action_star"
                    app:tint="@color/md_theme_outlineVariant" />

            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/remarkDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="bottom|start"
            android:inputType="textMultiLine"
            android:lines="4"
            android:maxLines="4"
            android:hint="@string/wtp_remark_commentLabel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wtp_remark_submitButton" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>