<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.presentation.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/profileCaption"
                style="@style/TextAppearance.Material3.TitleLarge.Emphasized"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/profile_caption"
                android:textAlignment="center" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:background="@drawable/profile_gradient">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/initialsLayout"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/initialsImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/profile_initial_text"
                        android:padding="4dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/dog_placeholder"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/ShapeAppearance.Round50Percent"
                        app:strokeColor="@color/md_theme_outline"
                        app:strokeWidth="4dp"
                        app:tint="@color/md_theme_onSecondaryVariant"
                        app:tintMode="multiply" />

                    <TextView
                        android:id="@+id/initialsText"
                        style="@style/TextAppearance.Material3.DisplaySmall.Emphasized"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:text="@string/profile_initial_text"
                        android:textColor="@color/md_theme_onSecondary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/nameText"
                    style="@style/TextAppearance.Material3.HeadlineMedium.Emphasized"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/profile_name_text"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/initialsLayout" />

                <TextView
                    android:id="@+id/emailText"
                    style="@style/TextAppearance.Material3.LabelLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/profile_email_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameText" />

                <TextView
                    android:id="@+id/roleBadge"
                    style="@style/TextAppearance.Material3.LabelLarge.Emphasized"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/borderpillshape"
                    android:gravity="center"
                    android:text="@string/profile_role_example"
                    android:textColor="@color/md_theme_onBackground"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/visitCard"
                    style="@style/Widget.Material3.CardView.Filled"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1">

                    <!-- Content -->

                    <LinearLayout
                        android:id="@+id/visitCardLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/visitCardValue"
                            style="@style/TextAppearance.Material3.LabelLarge.Emphasized"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_visit_value"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/visitCardLabel"
                            style="@style/TextAppearance.Material3.LabelSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_visit_label"
                            android:textAlignment="center"
                            android:textAllCaps="true" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/distanceCard"
                    style="@style/Widget.Material3.CardView.Filled"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1">

                    <!-- Content -->

                    <LinearLayout
                        android:id="@+id/distanceCardLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/distanceCardValue"
                            style="@style/TextAppearance.Material3.LabelLarge.Emphasized"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_distance_value"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/distanceCardLabel"
                            style="@style/TextAppearance.Material3.LabelSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_distance_label"
                            android:textAlignment="center"
                            android:textAllCaps="true" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/favCard"
                    style="@style/Widget.Material3.CardView.Filled"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1">

                    <!-- Content -->

                    <LinearLayout
                        android:id="@+id/favCardLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/favCardValue"
                            style="@style/TextAppearance.Material3.LabelLarge.Emphasized"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_fav_value"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/favCardLabel"
                            style="@style/TextAppearance.Material3.LabelSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_fav_label"
                            android:textAlignment="center"
                            android:textAllCaps="true" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:enabled="true"
                android:hint="@string/profile_name_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_name_value" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:enabled="false"
                android:hint="@string/profile_email_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/profile_email_value" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:enabled="true"
                android:hint="@string/profile_phone_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/profile_phone_value" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:enabled="true"
                android:hint="@string/profile_birthbay_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthdayInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:enabled="true"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="@string/profile_birthday_value" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:enabled="false"
                android:hint="@string/profile_volunteer_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/volunteerSinceInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:enabled="true"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="@string/profile_volunteer_value" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/logoutButton"
                    style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_action_logout"
                    android:padding="16dp"
                    android:text="@string/profile_logoutButton_desc"
                    app:icon="@drawable/ic_action_logout"
                    app:iconPadding="8dp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/profile_saveButton_label" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>